<resources>
    <string name="app_name">WAGBA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_welcome">Welcome!</string>
    <string name="text_slogan">SERVED HOT AND FAST</string>
    <string name="text_welcome_message">
        Welcome to Wagba! start by creating a new account if you are not already a user, or login to be served!
    </string>
    <string name="text_or">or</string>
    <string name="text_signin">Sign-In</string>
    <string name="text_signup">Sign-Up</string>
    <string name="hint_mobile">Mobile</string>
    <string name="btn_signup"><u>Sign-Up</u></string>
    <string name="text_signin_describe">Sign-In to continue</string>
    <string name="text_signup_describe">Sign-up to Wagba</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Retype your password</string>
    <string name="hint_address">Type your address</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="text_alternative_login">or login with</string>
    <string name="text_alternative_register">or register with</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile_username">Ahmed Salah Abdulmaksoud</string>
    <string name="profile_mobile">+20 122 3145 678</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_offers">Latest Offers!</string>

    <!--    Recycler View Resturant Item-->
    <string name="rest_item_name">Resturant Name</string>
    <string name="rest_item_class">Resturant Class</string>
    <string name="rest_item_rating">Rating</string>
    <string name="rest_avg_order_time">Order Time</string>
    <string name="rest_delivery_price">Delivery Price</string>

    <!--    Account Items-->
    <string name="account_cart">Cart</string>
    <string name="account_orders">Your orders</string>
    <string name="account_vouchers">Vouchers</string>
    <string name="account_pay">Payment Methods</string>
    <string name="account_help">Help</string>
    <string name="account_about">About</string>
    <string name="account_logout">Logout</string>

    <!--    Search Items-->
    <string name="search_hint">Search for food, resturant, etc.</string>

    <!--    Dish Item-->
    <string name="dish_description">One Beef Sandwiches, 1 chicken sandwich, 6 chicken wings pieces served with your choice of sauce, waffle fries and 2 soda drinks</string>
    <string name="currency">EGP</string>
    <string name="dish_price">250.00</string>
    <string name="place_order">Add to Cart</string>
    <string name="special_requests">Any special request?</string>
    <string name="sandwitch_name">Sandwitch Name</string>
    <string name="shared_pref_name">uuidpref</string>

    <!--Cart-->
    <string name="cart_title">Orders Cart</string>
    <string name="cart_checkout">Checkout</string>
    <string name="cart_cancel">Cancel</string>
    <string name="cart_delivery_subtotal">delivery subtotal:</string>
    <string name="cart_items_subtotal">items subtotal:</string>
    <string name="cart_items_grandtotal">Total:</string>
    <string name="cart_address">Deliver to:</string>
    <string name="cart_delivery_time">Deliver at:</string>
    <string name="gate3">Gate 3</string>
    <string name="gate4">Gate 4</string>
    <string name="noon">Noon (12 PM) </string>
    <string name="afternoon">Afternoon (3 PM) </string>

    <!--orders history-->
    <string name="ohistory_title">Orders History</string>

<!--    Order tracking-->
    <string name="order_tracking_title">Order Tracking</string>
    <string name="orderId_hint">OrderID:</string>
    <string name="orderDate_hint">Order Date Time:</string>
    <string name="orderRestaurant_hint">Restaurant:</string>
    <string name="orderPeriod_hint">Period:</string>
<!--    Order Status Hints-->
    <string name="order_waiting">Waiting to be approved</string>
    <string name="order_preparing">Preparing</string>
    <string name="order_delivered">Delivered</string>
    <string name="order_price">Price:</string>
</resources>