<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:background="@color/white"
    android:layout_marginVertical="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/img_holder"
            app:cardCornerRadius="10dp"
            >
            <ImageView
                android:background="@color/white"
                android:id="@+id/item_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/item_photo"
                android:scaleType="fitXY"
                />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/img_holder"
            >
            <TextView
                android:id="@+id/item_name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_item_name"
                android:textColor="@color/dark"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/item_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/rest_item_class"
                android:layout_below="@+id/item_name"
                android:textColor="@color/dark_gray"
                />
            <TextView
                android:id="@+id/item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_item_rating"
                android:layout_below="@+id/item_class"
                android:textColor="@android:color/black"
                android:drawableLeft="@drawable/ic_baseline_star_24"
                />
            <TextView
                android:id="@+id/item_delivery_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_avg_order_time"
                android:layout_below="@+id/item_rating"
                android:textColor="@android:color/black"
                android:drawableLeft="@drawable/ic_baseline_clock_15"
                />
            <TextView
                android:id="@+id/item_delivery_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest_delivery_price"
                android:layout_below="@+id/item_rating"
                android:layout_toRightOf="@id/item_delivery_time"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/ic_baseline_delivery"
                android:textColor="@android:color/black"
                />
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>