<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_pic_container"
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="82dp"
                        android:layout_height="82dp"
                        android:elevation="10dp"
                        android:src="@mipmap/ic_launcher" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/profile_pic_container"
                    android:text="@string/profile_username"
                    android:textColor="@color/dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_name"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/profile_pic_container"
                    android:text="@string/profile_mobile"
                    android:textColor="@color/wagba_orange"
                    android:textSize="15sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="39dp">

            <Button
                android:id="@+id/account_orders"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_orders"
                android:gravity="center_vertical"
                android:paddingVertical="1dp"
                android:text="@string/account_orders" />

            <Button
                android:id="@+id/account_vouchers"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"
                android:layout_marginVertical="2dp"
                android:drawableLeft="@drawable/ic_baseline_vouchers"
                android:gravity="center_vertical"
                android:text="@string/account_vouchers" />

            <Button
                android:id="@+id/account_payment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"
                android:layout_marginVertical="5dp"
                android:drawableLeft="@drawable/ic_baseline_attach_money_24"
                android:gravity="center_vertical"
                android:text="@string/account_pay" />

            <Button
                android:id="@+id/account_help"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"
                android:layout_marginVertical="5dp"
                android:drawableLeft="@drawable/ic_baseline_help_24"
                android:gravity="center_vertical"
                android:text="@string/account_about" />

            <Button
                android:id="@+id/account_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_baseline_about"
                android:gravity="center_vertical"
                android:text="@string/account_help" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>