<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin"
    tools:context=".fragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_welcome"
                        android:textColor="@color/dark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textDescribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textTitle"
                        android:text="@string/text_signin_describe"
                        android:textColor="@color/dark"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="82dp"
                        android:layout_height="82dp"
                        android:layout_toRightOf="@+id/textDescribe"
                        android:src="@drawable/food" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/textEmail"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_email"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:background="@drawable/rounded_field"
                    android:textColorHint="@color/dark"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/textPassword"
                    android:layout_width="330dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textEmail"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:paddingLeft="5dp"
                    android:background="@drawable/rounded_field"
                    android:textColorHint="@color/dark"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/textPassword"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/btn_signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:text="@string/text_signin"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.092" />

                    <TextView
                        android:id="@+id/alternativeMethods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_alternative_login"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.727" />

                    <ImageView
                        android:id="@+id/img_loginWithGoogle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/google"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/alternativeMethods"
                        app:layout_constraintStart_toStartOf="@+id/alternativeMethods"
                        app:layout_constraintTop_toBottomOf="@+id/alternativeMethods"
                        app:layout_constraintVertical_bias="0.252" />

                    <TextView
                        android:id="@+id/txt_goToSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_signup"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/alternativeMethods"
                        app:layout_constraintEnd_toEndOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintVertical_bias="0.172" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/text_or"
                        app:layout_constraintBottom_toTopOf="@+id/alternativeMethods"
                        app:layout_constraintEnd_toEndOf="@+id/btn_signIn"
                        app:layout_constraintHorizontal_bias="0.506"
                        app:layout_constraintStart_toStartOf="@+id/btn_signIn"
                        app:layout_constraintTop_toBottomOf="@+id/btn_signIn"
                        app:layout_constraintVertical_bias="0.087" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</FrameLayout>